# Sidekick2000

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: build.yml
contexts/: affinity.md  default.md  welqin.md
docs/: DUAL_STREAM.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  diarize.rs  export.rs  github.rs  lib.rs  live_transcribe.rs  main.rs  merge.rs  pipeline.rs  settings.rs  summarize.rs  transcribe.rs  whisper_local.rs
src/components/: AudioMeter.svelte  Logo.svelte  ProcessingSection.svelte  RecordSection.svelte  ResultSection.svelte  Select.svelte  SettingsSection.svelte  SetupSection.svelte  SpeakerChip.svelte
src/lib/: api.ts  state.svelte.ts  types.ts
