[package]
name = "sidekick2000"
version = "0.1.0"
edition = "2021"

[lib]
name = "sidekick2000_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sidekick2000"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
cpal = "0.15"
hound = "3.5"
rustfft = "6"
ndarray = "0.16"
chrono = "0.4"
dotenvy = "0.15"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
open = "5"
base64 = "0.22"
audiopus = "0.3.0-rc.0"
audiopus_sys = { version = "0.2", features = ["static"] }
ogg = "0.9"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "flac", "ogg", "vorbis", "wav", "pcm", "isomp4", "aac"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
